[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "revtron"
version = "0.0.10"
authors = [
  { name="Revtron Inc.", email="dylan@ditat.io" },
]
license = {file = "LICENSE"}
description = "Revtron Salesforce"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	"requests",
]

[project.urls]
"Homepage" = "https://github.com/ditat-llc/revtron-salesforce"

[project.scripts]
